// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart State utils should compute and format specifications for non stacked chart 1`] = `
Array [
  Object {
    "counts": Object {
      "areaSeries": 0,
      "barSeries": 0,
      "lineSeries": 1,
    },
    "dataSeries": Array [
      Object {
        "data": Array [
          Object {
            "datum": Object {
              "x": 0,
              "y": 1,
            },
            "initialY0": null,
            "initialY1": 1,
            "x": 0,
            "y0": 0,
            "y1": 1,
          },
          Object {
            "datum": Object {
              "x": 1,
              "y": 2,
            },
            "initialY0": null,
            "initialY1": 2,
            "x": 1,
            "y0": 0,
            "y1": 2,
          },
          Object {
            "datum": Object {
              "x": 2,
              "y": 10,
            },
            "initialY0": null,
            "initialY1": 10,
            "x": 2,
            "y0": 0,
            "y1": 10,
          },
          Object {
            "datum": Object {
              "x": 3,
              "y": 6,
            },
            "initialY0": null,
            "initialY1": 6,
            "x": 3,
            "y0": 0,
            "y1": 6,
          },
        ],
        "key": "spec{spec1}yAccessor{y}splitAccessors{}",
        "seriesKeys": Array [
          "y",
        ],
        "specId": "spec1",
        "splitAccessors": Map {},
        "yAccessor": "y",
      },
    ],
    "groupId": "group1",
  },
  Object {
    "counts": Object {
      "areaSeries": 0,
      "barSeries": 0,
      "lineSeries": 1,
    },
    "dataSeries": Array [
      Object {
        "data": Array [
          Object {
            "datum": Object {
              "x": 0,
              "y": 1,
            },
            "initialY0": null,
            "initialY1": 1,
            "x": 0,
            "y0": 0,
            "y1": 1,
          },
          Object {
            "datum": Object {
              "x": 1,
              "y": 2,
            },
            "initialY0": null,
            "initialY1": 2,
            "x": 1,
            "y0": 0,
            "y1": 2,
          },
          Object {
            "datum": Object {
              "x": 2,
              "y": 10,
            },
            "initialY0": null,
            "initialY1": 10,
            "x": 2,
            "y0": 0,
            "y1": 10,
          },
          Object {
            "datum": Object {
              "x": 3,
              "y": 6,
            },
            "initialY0": null,
            "initialY1": 6,
            "x": 3,
            "y0": 0,
            "y1": 6,
          },
        ],
        "key": "spec{spec2}yAccessor{y}splitAccessors{}",
        "seriesKeys": Array [
          "y",
        ],
        "specId": "spec2",
        "splitAccessors": Map {},
        "yAccessor": "y",
      },
    ],
    "groupId": "group2",
  },
]
`;

exports[`Chart State utils should compute and format specifications for stacked chart 1`] = `
Array [
  Object {
    "counts": Object {
      "areaSeries": 0,
      "barSeries": 0,
      "lineSeries": 2,
    },
    "dataSeries": Array [
      Object {
        "data": Array [
          Object {
            "datum": Object {
              "g": "a",
              "x": 0,
              "y": 1,
            },
            "initialY0": null,
            "initialY1": 1,
            "x": 0,
            "y0": null,
            "y1": 1,
          },
          Object {
            "datum": Object {
              "g": "a",
              "x": 1,
              "y": 2,
            },
            "initialY0": null,
            "initialY1": 2,
            "x": 1,
            "y0": null,
            "y1": 2,
          },
          Object {
            "datum": Object {
              "g": "a",
              "x": 2,
              "y": 3,
            },
            "initialY0": null,
            "initialY1": 3,
            "x": 2,
            "y0": null,
            "y1": 3,
          },
          Object {
            "datum": Object {
              "g": "a",
              "x": 3,
              "y": 4,
            },
            "initialY0": null,
            "initialY1": 4,
            "x": 3,
            "y0": null,
            "y1": 4,
          },
        ],
        "key": "spec{spec2}yAccessor{y}splitAccessors{g-a}",
        "seriesKeys": Array [
          "a",
          "y",
        ],
        "specId": "spec2",
        "splitAccessors": Map {
          "g" => "a",
        },
        "yAccessor": "y",
      },
      Object {
        "data": Array [
          Object {
            "datum": Object {
              "g": "b",
              "x": 0,
              "y": 2,
            },
            "initialY0": null,
            "initialY1": 2,
            "x": 0,
            "y0": 1,
            "y1": 3,
          },
          Object {
            "datum": Object {
              "g": "b",
              "x": 1,
              "y": 3,
            },
            "initialY0": null,
            "initialY1": 3,
            "x": 1,
            "y0": 2,
            "y1": 5,
          },
          Object {
            "datum": Object {
              "g": "b",
              "x": 2,
              "y": 4,
            },
            "initialY0": null,
            "initialY1": 4,
            "x": 2,
            "y0": 3,
            "y1": 7,
          },
          Object {
            "datum": Object {
              "g": "b",
              "x": 3,
              "y": 5,
            },
            "initialY0": null,
            "initialY1": 5,
            "x": 3,
            "y0": 4,
            "y1": 9,
          },
        ],
        "key": "spec{spec2}yAccessor{y}splitAccessors{g-b}",
        "seriesKeys": Array [
          "b",
          "y",
        ],
        "specId": "spec2",
        "splitAccessors": Map {
          "g" => "b",
        },
        "yAccessor": "y",
      },
    ],
    "groupId": "group2",
  },
]
`;

exports[`Chart State utils should compute and format specifications for stacked chart 2`] = `
Array [
  Object {
    "counts": Object {
      "areaSeries": 0,
      "barSeries": 0,
      "lineSeries": 2,
    },
    "dataSeries": Array [
      Object {
        "data": Array [
          Object {
            "datum": Object {
              "g": "a",
              "x": 0,
              "y": 1,
            },
            "initialY0": null,
            "initialY1": 1,
            "x": 0,
            "y0": 0,
            "y1": 1,
          },
          Object {
            "datum": Object {
              "g": "a",
              "x": 1,
              "y": 2,
            },
            "initialY0": null,
            "initialY1": 2,
            "x": 1,
            "y0": 0,
            "y1": 2,
          },
          Object {
            "datum": Object {
              "g": "a",
              "x": 2,
              "y": 3,
            },
            "initialY0": null,
            "initialY1": 3,
            "x": 2,
            "y0": 0,
            "y1": 3,
          },
          Object {
            "datum": Object {
              "g": "a",
              "x": 3,
              "y": 4,
            },
            "initialY0": null,
            "initialY1": 4,
            "x": 3,
            "y0": 0,
            "y1": 4,
          },
        ],
        "key": "spec{spec1}yAccessor{y}splitAccessors{g-a}",
        "seriesKeys": Array [
          "a",
          "y",
        ],
        "specId": "spec1",
        "splitAccessors": Map {
          "g" => "a",
        },
        "yAccessor": "y",
      },
      Object {
        "data": Array [
          Object {
            "datum": Object {
              "g": "b",
              "x": 0,
              "y": 2,
            },
            "initialY0": null,
            "initialY1": 2,
            "x": 0,
            "y0": 0,
            "y1": 2,
          },
          Object {
            "datum": Object {
              "g": "b",
              "x": 1,
              "y": 3,
            },
            "initialY0": null,
            "initialY1": 3,
            "x": 1,
            "y0": 0,
            "y1": 3,
          },
          Object {
            "datum": Object {
              "g": "b",
              "x": 2,
              "y": 4,
            },
            "initialY0": null,
            "initialY1": 4,
            "x": 2,
            "y0": 0,
            "y1": 4,
          },
          Object {
            "datum": Object {
              "g": "b",
              "x": 3,
              "y": 5,
            },
            "initialY0": null,
            "initialY1": 5,
            "x": 3,
            "y0": 0,
            "y1": 5,
          },
        ],
        "key": "spec{spec1}yAccessor{y}splitAccessors{g-b}",
        "seriesKeys": Array [
          "b",
          "y",
        ],
        "specId": "spec1",
        "splitAccessors": Map {
          "g" => "b",
        },
        "yAccessor": "y",
      },
    ],
    "groupId": "group1",
  },
]
`;
